# lindera-unidic-builder

./: .gitignore  AUTHORS  CHANGES.md  Cargo.toml  Makefile  NOTICE.txt  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  unidic_builder.rs
