[package]
name = "lindera-unidic-builder"
version = "0.3.1"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>"
    ]
edition = "2018"
description = "A Japanese morphological dictionary builder for UniDic."
documentation = "https://docs.rs/lindera-unidic-builder"
homepage = "https://github.com/lindera-morphology/lindera-unidic-builder"
repository = "https://github.com/lindera-morphology/lindera-unidic-builder"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "unidic"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.2"
clap = "2.33.0"
csv = "1.1.3"
encoding = "0.2.33"
glob = "0.3.0"
lindera-core = "0.3.2"
lindera-fst = "0.1.0"

[[bin]]
name = "lindera-unidic"
path = "src/main.rs"
